add PowerUpPool